Worked on editing from results chapter review

--- a/control/control_implementation.tex
+++ b/control/control_implementation.tex
@@ -276,6 +276,6 @@
     \paragraph
     The advantage of the \gls{LQR} architecture is that it is computationally simple in comparison to an \gls{MPC}.
     However, the \gls{LQR} architecture is designed for a specific system configuration and only accounts for changes in specific system parameters. 
-    In contrast, the \gls{MPC} architecture provides a good general solution for different system configurations without considering individual parameters and without a priori modelling.
+    In contrast, the \gls{MPC} architecture provides a good general solution for different system configurations without considering individual parameters and without a~priori modelling.
 
 } % end of tikz set
