--- a/control/mpc.tex
+++ b/control/mpc.tex
@@ -382,14 +382,14 @@
     \FloatBarrier\subsection{Tuning} \label{sec:mpc_tuning}
 
         \paragraph
-        An MPC can easily be tuned for a range of different design requirements.
-        The same general design requirements will be applied to the MPC as to the LQR in Section~\ref{sec:lqr}, namely,
+        An \gls{MPC} can easily be tuned for a range of different design requirements.
+        The same general design requirements will be applied to the \gls{MPC} as to the LQR in Section~\ref{sec:lqr}, namely,
         to produce a fast velocity response with zero steady-state error while damping the payload oscillations quickly.
-        The MPC is firstly tuned to have a similar response time to the LQR so that the controller performances can be roughly compared.
+        The \gls{MPC} is firstly tuned to have a similar response time to the LQR so that the controller performances can be roughly compared.
         Thereafter, it is tuned to produce a trajectory that is as smooth as possible.
 
         \paragraph
-        The MPC parameters that are determined in the controller design are,
+        The \gls{MPC} parameters that are determined in the controller design are,
         $N_p$, 
         $N_c$, 
         $\bm{w}^y$,
