--- a/glossary.tex
+++ b/glossary.tex
@@ -58,6 +58,7 @@
 \newacronym{UAV}{UAV}{Unmanned Aerial Vehicle}
 \newacronym{VTOL}{VTOL}{Vertical Takeoff and Landing}
 \newacronym{CPU}{CPU}{Central Processing Unit}
+\newacronym{RAM}{RAM}{Random Access Memory}
 \newacronym{UART}{UART}{Universal Asynchronous Receiver Transmitter}
 \newacronym{FC}{FC}{Flight Controller}
 \newacronym{USB}{USB}{Universal Serial Bus}
