--- a/results/plots/CPU_vs_q.tex
+++ b/results/plots/CPU_vs_q.tex
@@ -3,7 +3,7 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = {Number of delay-coordinates, $q$},
-            ylabel = \%~CPU,
+            ylabel = \%CPU,
             % x unit = \si{\second},
             % y unit = \%,
             xmin = 0,   xmax = 80,
@@ -36,6 +36,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Maximum \% CPU used by the MPC node for different values of $q$ ($Ts =$~\SI{0.03}{\second})}
+    \caption{Maximum \%CPU used by the MPC node for different values of $q$ ($Ts =$~\SI{0.03}{\second})}
     \label{fig:CPU_vs_q}
 \end{figure}
