--- a/system_id/param_estimation.tex
+++ b/system_id/param_estimation.tex
@@ -14,7 +14,7 @@
 \subsection{White-box model}
 
     \paragraph
-    A white-box model was derived a priori by \cite{Slabber2020} to represent the dynamics of the quadrotor-payload system.
+    A white-box model was derived a~priori by \cite{Slabber2020} to represent the dynamics of the quadrotor-payload system.
     The non-linear dynamical equations derived in Chapter~\ref{chap:modelling} were linearised to produce a linear state-space model.
     The equations were linearised around hover by applying small angle approximations.
     As discussed in Section~\ref{sec:payload_assumptions}, the payload is attached to the \gls{CoM} of the multirotor.
@@ -85,7 +85,7 @@
     To compare other aspects of the white-box and black-box techniques with more clarity, 
     it will be assumed that the method estimates $m_p$ with perfect accuracy.
     This isolates any inaccuracies in the white-box model to 
-    either the a priori modelling or the cable length estimation.
+    either the a~priori modelling or the cable length estimation.
 
     \paragraph
     It should be noted however that this method is dependant on the assumption 
@@ -98,7 +98,7 @@
     The parameter estimation methods are designed for specific modelling assumptions 
     and are not adaptable to different types of payload loadings.
     In contrast, data-driven techniques are adaptable to different payload loadings 
-    because it does not depend on a priori modelling assumptions.
+    because it does not depend on a~priori modelling assumptions.
 
 \subsection{Cable length estimation} \label{sec:length_estimation}
 
