--- a/system_id/white_black_box.tex
+++ b/system_id/white_black_box.tex
@@ -4,7 +4,7 @@
     Models determined from data-driven system identification methods are generally called black-box models.
     The user is only concerned with the inputs and output of the model
     and does not need to derive mathematical relationships from theoretical deductions.
-    In contrast, white-box models are determined from a priori modelling and
+    In contrast, white-box models are determined from a~priori modelling and
     the user defines the physics of white-box models.
 
     \subsection{White-box techniques}
@@ -53,7 +53,7 @@
         Since the controller is dependent on this model, 
         the mismatch between the model and actual dynamics may result in undesirable controller behaviour.
         Therefore a new model and parameter estimation technique will need to be derived 
-        for every use case that deviates significantly from the a priori model.
+        for every use case that deviates significantly from the a~priori model.
 
     \subsection{Black-box techniques}
 
