--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -60,10 +60,10 @@
         % \paragraph
         % For each of these payload cases, a different parameter estimation based techniques would needs to be designed for effective control.
         % This is undesirable for practical drone deliveries, especially when the type of payload is not known well in advance or changes regularly.
-        % A data-driven technique provides a more general solution since it accommodates a larger range of payload types and does not require a priori modelling information.
+        % A data-driven technique provides a more general solution since it accommodates a larger range of payload types and does not require a~priori modelling information.
             
         % \paragraph
-        % Since the a priori white-box model is based on a single pendulum model, 
+        % Since the a~priori white-box model is based on a single pendulum model, 
         % the dynamics described by the model are significantly different from the actual dynamics.
         % This will have a detrimental effect on the control performance of a controller based on such a model,
         % since the controller will be designed for different plant than what it is controlling actually controlling.
